docker/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secman
  labels:
    app.kubernetes.io/name: secman
